2003-09-25  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc, xmt.h: add Thread state flags, intended to show
	if underlined thread is still running without restrictions
	for detached threads; method 'good' show that underlined
	thread still running, 'bad'---not running or in bad state
	and 'is_join_req' show if 'join' applicable to this thread,
	even if thread terminated and became bad; add support
	for FreeBSD 5.1; remove STLport specific macros.


2003-09-15  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc: fix wrong behaviour for wait_* functions of Semaphore
	class on Windows platforms [thanks Anton Kholodkov].

	* xmt.h: recurcive safe mutex and spinlock implementation revised.
	
2003-09-02  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h: IEEE Std. 1003.1j-2000 introduce spinlock functions,
	I add wrapper classes for pthread_spin_* functions, like *mutex_*
	wrappers. This feature added for Linux only, check for other modern
	*nixes required.

2003-03-26  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h: broadcast signaling added to Condition for non-windows
	paltforms.

	* libxmt: Version 1.6.7
	
2003-02-14  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h, xmt.cc: nanosleep required interval, not absolute time.
	See IEEE Std 1003.1-2001 and other POSIX-like specs since 1998.

2003-02-12  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h, xmt.cc: wrong time calculation for Semaphor with timeout.

	* libxmt: Version 1.6.6

2003-02-05  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h, xmt.cc: add Semaphor wait with timeout.

	* libxmt: Version 1.6.5

2003-01-19  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h: modified portable mutex templates---separate
	mutex initialization for mutex options opportunity;
	use XSI recursive mutexes feature if possible.

	* libxmt: Version 1.6.4

2003-01-17  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h: experimental implementation of portable mutexes,